--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<title>Neo4j</title>
+    <meta charset="UTF-8"/>
+    <title>Strucky</title>
 </head>
 <body>
-	<h1>Welcome on the main page</h1>
+<h1>Welcome on the main page</h1>
 </body>
 </html>
