--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -11,8 +11,8 @@
 <style type="text/css">
     .node { stroke: #222; stroke-width: 1.5px; }
     .node.application { fill: #BBB; }
-    .node.method { fill: #F00; }
-    .link { stroke: #FF0; stroke-opacity: .6; stroke-width: 1px; }
+    .node.method { fill: #F30; }
+    .link { stroke: #000; stroke-opacity: .6; stroke-width: 1px; }
 </style>
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
