Visualization first try

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -11,14 +11,16 @@
 <style type="text/css">
     .node { stroke: #222; stroke-width: 1.5px; }
     .node.application { fill: #BBB; }
-    .node.method { fill: #F30; }
+    .node.method { fill: #F91; }
     .link { stroke: #000; stroke-opacity: .6; stroke-width: 1px; }
+    .title { stroke: #F00; stroke-width: 1px;}
+    .type { stroke: #F00; stroke-width: 1px;}
 </style>
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
 <script type="text/javascript">
-    var width = 800, height = 800;
+    var width = 1200, height = 1200;
 
     var force = d3.layout.force()
             .charge(-200).linkDistance(30).size([width, height]);
@@ -36,6 +38,10 @@
                 .data(graph.links).enter()
                 .append("line").attr("class", "link");
 
+        link.append("type").attr("class","type").text(function (d) {return d.type})
+
+        link.append("count").attr("class","type").text(function (d) {return d.count})
+
         var node = svg.selectAll(".node")
                 .data(graph.nodes).enter()
                 .append("circle")
@@ -44,7 +50,7 @@
                 .call(force.drag);
 
         // html title attribute
-        node.append("title")
+        node.append("title").attr("class","title")
                 .text(function (d) { return d.title; })
 
         // force feed algo ticks
