--- a/src/main/webapp/WEB-INF/templates/css/graphStyles.css
+++ b/src/main/webapp/WEB-INF/templates/css/graphStyles.css
@@ -19,6 +19,7 @@
 .node.method120 {
     fill: #03510d;
 }
+
 .node.method0 {
     fill: #e4e218;
 }
@@ -28,6 +29,7 @@
     stroke-opacity: .6;
     stroke-width: 1px;
 }
+
 .link.consumes {
     stroke: #00d3ff;
     stroke-width: 2px;
@@ -40,4 +42,36 @@
 .type {
     stroke: #F00;
     stroke-width: 1px;
+}
+
+.select {
+    color: red;
+    font-style: italic;
+}
+
+#graph {
+    border: 10px;
+}
+
+#toolbar {
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 15%;
+}
+
+tbody {
+    font-style: normal;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+th{
+    width: 120px;
+}
+table{
+    table-layout:fixed;
+}
+
+#toolbar {
+    float: right;
 }
