removed application cache

--- a/src/main/webapp/WEB-INF/templates/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/fragments.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="@{../css/styles.css}" th:href="@{css/styles.css}" type="text/css"/>
-    <link rel="stylesheet" href="@{../css/graphStyles.css}" th:href="@{css/graphStyles.css}" type="text/css"/>
-    <title>Vizualizace</title>
+    <link rel="stylesheet" href="@{../styles.css}" th:href="@{css/styles.css}" type="text/css"/>
+    <link rel="stylesheet" href="@{../graphStyles.css}" th:href="@{css/graphStyles.css}" type="text/css"/>
+    <title>Neo -Integra graf</title>
 </head>
 <body>
 
