--- a/src/main/webapp/WEB-INF/templates/admin.html
+++ b/src/main/webapp/WEB-INF/templates/admin.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-6">
                 <div class="nav navbar-nav">
-                    <button class="btn btn-default" onclick="showGraph()" type="submit">Zobrazit graf</button>
+                    <a th:href="@{/index}"><button class="btn btn-default" onclick="showGraph()" type="submit">Zobrazit graf</button></a>
                     <a th:href="@{/admin}"><span class="btn btn-default">Sheduling</span></a>
                 </div>
             </div>
@@ -25,7 +25,9 @@
     <div class="navbar-form">
         <a th:href="@{/scheduler/start}"><button class="btn btn-default">Spustit scheduler</button></a>
         <a th:href="@{/scheduler/stop}"><button class="btn btn-default">Zastavit scheduler</button></a>
+        <a th:href="@{/scheduler/status}"><button class="btn btn-default">Stav</button></a>
     </div>
 </div>
 </body>
+
 </html>
