--- a/src/main/webapp/WEB-INF/css/styles.css
+++ b/src/main/webapp/WEB-INF/css/styles.css
@@ -329,7 +329,7 @@ body {
     line-height: 1.428571429;
     color: #333333;
     background-color: #ffffff;
-    background: url("../img/background.jpg") repeat fixed 0 0 rgba(0, 0, 0, 0);
+    /*background: url("../img/background.jpg") repeat fixed 0 0 rgba(0, 0, 0, 0);*/
     font-family: 'Open Sans', Arial !important;
 
 }
