--- a/src/main/webapp/WEB-INF/templates/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/fragments.html
@@ -8,6 +8,16 @@
     <title>Neo -Integra graf</title>
 </head>
 <body>
-
+<div id="navigation" role="navigation" class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <div class="nav navbar-nav">
+                    <a th:href="@{/admin}"><span class="btn btn-default">Sheduling</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
