--- a/src/main/webapp/WEB-INF/templates/visualisation.html
+++ b/src/main/webapp/WEB-INF/templates/visualisation.html
@@ -3,18 +3,7 @@
 <body>
 <div id="graph">
 </div>
-<div role="navigation" class="navbar navbar-default navbar-static-top">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-md-6">
-                <div class="nav navbar-nav">
-                    <button class="btn btn-default" onclick="showGraph()" type="submit">Zobrazit graf</button>
-                    <a th:href="@{/admin}"><span class="btn btn-default">Sheduling</span></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div th:replace="fragments::#navigation"/>
 <div id="toolbar">
     <div id="appName"></div>
     <table id="consumedMethodsTable">
@@ -25,17 +14,15 @@
         </thead>
         <tbody id="consumedTbody">
         <tr>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
+            <td>N/A</td>
+            <td>N/A</td>
+            <td>N/A</td>
         </tr>
         </tbody>
     </table>
-
 </div>
-<script type="text/javascript" src="../js/visualisationD3.js" th:src="@{js/visualisationD3.js}"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
-
+<script type="text/javascript" src="../js/visualisationD3.js" th:src="@{js/visualisationD3.js}"></script>
 </body>
 </html>
