Fixed spring config, added CRUD on list, cleaned JSON response

--- a/src/main/webapp/WEB-INF/templates/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/fragments.html
@@ -14,6 +14,7 @@
             <div class="col-sm-6 col-md-6">
                 <div class="nav navbar-nav">
                     <a th:href="@{/admin}"><span class="btn btn-default">Sheduling</span></a>
+                    <a th:href="@{/list}"><span class="btn btn-default">List</span></a>
                 </div>
             </div>
         </div>
