--- a/src/main/webapp/WEB-INF/templates/systemsList.html
+++ b/src/main/webapp/WEB-INF/templates/systemsList.html
@@ -7,11 +7,15 @@
     <thead>
     <th>Name</th>
     <th>ID</th>
+    <th>Edit</th>
+    <th>Remove</th>
     </thead>
     <tbody>
     <tr th:each="system : ${systems}">
-        <td th:text="${system.name}"></td>
-        <td th:text="${system.id}"></td>
+        <td><input type="text" th:value="${system.name}"/></td>
+        <td><input type="text" th:value="${system.id}" size="3"/></td>
+        <td><a th:href="@{/edit}">edit</a></td>
+        <td><a th:href="@{/delete}">remove</a></td>
     </tr>
     </tbody>
 </table>
